[tool.poetry]
name = "aliendev-database"
version = "0.1.0"
description = ""
authors = ["Nasri Adzlani <nasri@jkt1.ebdesk.com>"]
readme = "README.md"
packages = [{include = "aliendev_database"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"

[tool.poetry.scripts]
aliendev-database = 'aliendev_database:Database'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
